ajuste de email

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,77 @@
-<p>Hello <%= @resource.email %>!</p>
 
-<p>Someone has requested a link to change your password. You can do this through the link below.</p>
 
-<p><%= link_to 'Change my password', edit_password_url(@resource, reset_password_token: @token) %></p>
-
-<p>If you didn't request this, please ignore this email.</p>
-<p>Your password won't change until you access the link above and create a new one.</p>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html>
+  <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
+    <title></title>
+  </head>
+  <body>
+    <table align="center" bgcolor="#EBEBEB" border="0" cellpadding="0" cellspacing="0" width="100%" style="font-family:Arial, Helvetica, sans-serif;font-size:10px;color:#333333;margin:0;padding:0;">
+      <tbody>
+        <tr>
+          <td height="20" style="font-size:1px;"> </td>
+        </tr>
+        <tr>
+          <td align="center" valign="middle">
+            <!--[if gte mso 9]>
+            <table width="600" border="0" align="center" cellpadding="0" cellspacing="0" style="width:600px;">
+              <tr>
+                <td>
+                  <![endif]-->
+            <!-- INICIO HEADER -->
+            <table align="center" bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;margin:0;padding:0;">
+              <tbody>
+                <tr>
+                  <td align="center" bgcolor="c0c0c0" valign="middle" height="26">
+                    <a href="http://www.youse.com.br/" title="Youse - Seguro Tipo Vc" style="text-decoration:none;" target="_blank">
+                      <img width="80" height="80" border="0" src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/82/SARS-CoV-2_without_background.png/597px-SARS-CoV-2_without_background.png" alt="Corona Vírus"></a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td height="20" style="font-size:1px;"> </td>
+                  </tr>
+                </tbody>
+              </table>
+              <!-- FIM HEADER -->
+              <!-- INICIO CONTEUDO ESPECIFICO -->
+              <table align="center" bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:600px;margin:0;padding:0;">
+                <tbody>
+                  <tr>
+                    <td align="center">
+                          <tr>
+                            <td align="center">
+                          <table align="center" bgcolor="#FFFFFF" border="0" cellpadding="0" cellspacing="0" width="100%" style="max-width:374px;margin:0;padding:0;">
+                            <tbody>
+                          <tr>
+                            <td height="40" style="font-size:1px;"></td>
+                          </tr>
+                          <tr>
+                            <td align="left">
+                              <span style="font-size:14px;line-height:25px;color:#191970;">
+                                Oi, <b style="color:#ed4f61;font-weight:bold;"><%= @resource.name %></b><br>
+                                Alguém solicitou um link para alterar sua senha. Você pode fazer isso através do link abaixo.<br>
+                                <%= link_to 'MUDAR MINHA SENHA', edit_password_url(@resource, reset_password_token: @token), :style => "display:block;width:70%;margin:0;padding:0;border-style:solid;border-color:#F6921E;border-width:13px 0;background-color:#F6921E;border-radius:20px;text-align:center;color:#2f3941;font-size:12px;text-decoration:none;font-weight: bold;"%><br>
+                                Se você não solicitou isso, ignore este e-mail.<br><br>
+                                Sua senha não será alterada até você acessar o link acima e criar um novo.
+                              </span>
+                            </td>
+                          </tr>
+                          <tr>
+                            <td height="20" style="font-size:1px;"> </td>
+                          </tr>
+                        </tbody>
+                      </table>
+                    </td>
+                  </tr>
+                </td>
+              </tr>
+                </tbody>
+              </table>
+              <tr>
+                <td height="30" style="font-size:1px;"> </td>
+              </tr>
+                    </tbody>
+                  </table>
+                </body>
+</html>
