--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav" align="center">
         <a class="nav-item nav-link" href="/games/new">Quiz</a>
-        <a class="nav-item nav-link" href="#">Minha Área</a>
+        <a class="nav-item nav-link" href="/informations/show">Minha Área</a>
         <a class="nav-item nav-link" href="/users/sign_in">Login</a>
         <a class="nav-item nav-link" href="/users/sign_up">Cadastro</a>
       </div>
@@ -57,8 +57,7 @@
       <% if user_signed_in? %>
       <strong class="op1"> <%= current_user.email %></strong> |
       <% end %>
-      
-      <% if request.fullpath != "/users/edit" &&  user_signed_in? %> 
+      <% if request.fullpath != "/users/edit" &&  user_signed_in? %>
       <%= link_to 'Editar perfil', edit_user_registration_path%> |
       <% end %>
 
