--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -29,29 +29,32 @@
   </div>
   </div>
 
-  <!-- ------------------------- hipertensao ------------------- -->
-  <div class="container-azul-imagem" style="height: 690px;">
-    <div class="row padding ">
-      <div class="col-sm-7">
-        <p class="titulo-h2" style="font-size: 30px; margin-bottom: 0;">Você possui Hipertensão, com isso deve se cuidar pois:</p>
-        <p class="subtitulo-azul">Pacientes com problemas no <b>coração</b> estão mais expostos ao problema porque algumas
-        substâncias que o órgão produz para combater a infecção podem deixar o coração mais fraco.</p>
+  <% if @user.hipertensao == true %>
+    <!-- ------------------------- hipertensao ------------------- -->
+    <div class="container-azul-imagem" style="height: 690px;">
+      <div class="row padding ">
+        <div class="col-sm-7">
+          <p class="titulo-h2" style="font-size: 30px; margin-bottom: 0;">Você possui Hipertensão, com isso deve se cuidar pois:</p>
+          <p class="subtitulo-azul">Pacientes com problemas no <b>coração</b> estão mais expostos ao problema porque algumas
+          substâncias que o órgão produz para combater a infecção podem deixar o coração mais fraco.</p>
 
-        <p class="subtitulo-azul">Segundo Bruno Valdigem, do Instituto Dante Pazzanese e do hospital Vila Nova Star
-        (Rede Dor/ São Luiz), o vírus ainda pode afetar o músculo cardíaco, caso o coração já esteja
-        sobrecarregado, e causar inflamação no miocárdio. Além disso, aumenta o risco de arritmias e parada cardíaca.</p>
+          <p class="subtitulo-azul">Segundo Bruno Valdigem, do Instituto Dante Pazzanese e do hospital Vila Nova Star
+          (Rede Dor/ São Luiz), o vírus ainda pode afetar o músculo cardíaco, caso o coração já esteja
+          sobrecarregado, e causar inflamação no miocárdio. Além disso, aumenta o risco de arritmias e parada cardíaca.</p>
 
-        <p class="subtitulo-azul">O especialista explica que o vírus usa o mesmo receptor que os remédios para hipertensão da classe
-        inibidores da ECA (enzima conversora de angiotensinogenio) para invadir as células, facilitando uma
-        infecção mais grave. Vale lembrar que não existe nenhum tipo de orientação para substituição ou suspensão
-        destes remédios e a relação ainda está sendo estudada por pesquisadores.</p>
-      </div>
-      <div class="col-sm-5">
-        <img src="<%= image_url('hipertensao.png') %>" class="hipertensao" alt="hipertensao">
+          <p class="subtitulo-azul">O especialista explica que o vírus usa o mesmo receptor que os remédios para hipertensão da classe
+          inibidores da ECA (enzima conversora de angiotensinogenio) para invadir as células, facilitando uma
+          infecção mais grave. Vale lembrar que não existe nenhum tipo de orientação para substituição ou suspensão
+          destes remédios e a relação ainda está sendo estudada por pesquisadores.</p>
+        </div>
+        <div class="col-sm-5">
+          <img src="<%= image_url('hipertensao.png') %>" class="hipertensao" alt="hipertensao">
+        </div>
       </div>
     </div>
-  </div>
+<% end %>
 
+<% if @user.asma == true %>
   <!-- ------------------------ asma ------------------ -->
   <div class="container-azul-imagem" style="height: 450px;">
     <div class="row padding ">
@@ -67,8 +70,9 @@
       </div>
     </div>
   </div>
+<% end %>
 
-
+<% if @user.diabetico == true %>
   <!-- --------------------- diabetico ------------- -->
   <div class="container-azul-imagem" style="height: 400px;">
     <div class="row padding ">
@@ -83,7 +87,9 @@
       </div>
     </div>
   </div>
+<% end %>
 
+<% if @user.fumante == true %>
 <!-- ------------ fumante ------------ -->
 <div class="container-azul-imagem" style="height: 400px;">
   <div class="row padding ">
@@ -98,7 +104,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if @user.gestante == true %>
 <!-- ----------- gestantes ------------------- -->
 <div class="container-azul-imagem" style="height: 1150px;">
   <div class="row padding ">
@@ -127,7 +135,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if @user.idoso == true %>
 <!-- ------------------ idoso ------------ -->
 <div class="container-azul-imagem" style="height: 550px;">
   <div class="row padding ">
@@ -147,7 +157,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if @user.obesidade == true %>
 <!-- ---------------- obesidade ------------------ -->
 <div class="container-azul-imagem" style="height: 800px;">
   <div class="row padding ">
@@ -172,8 +184,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
-
+<% if @user.cancer == true %>
 <!-- --------------- cancer ------------------ -->
 <div class="container-azul-imagem" style="height: 550px;">
   <div class="row padding ">
@@ -191,7 +204,10 @@
     </div>
   </div>
 </div>
+<
+<% end %>
 
+<% if @user.doe_cardio == true %>
 <!-- ----------- cardio ------------- -->
 <div class="container-azul-imagem" style="height: 750px;">
   <div class="row padding ">
@@ -212,7 +228,9 @@
     </div>
   </div>
 </div>
+<% end %>
 
+<% if @user.nenhuma == false && @user.idadee > 60 %>
 <!-- -------------------------- grupo de risco ------------------ -->
   <div class="container-maior container-sm">
     <div class="margem">
@@ -261,6 +279,25 @@
   </div>
   </div>
 
+  <div class="container-azul" style="height: 660px;">
+    <div class="row subtitulo-azul padding">
+      <p class="titulo-h2" style="font-size: 30px; margin-bottom: 0;">É importante ressaltar que a criança com deficiência faz parte do grupo de risco, incluindo:</p><br>
+      • Paralisia Cerebral;<br>
+      • Microcefalia;<br>
+      • Síndrome de Down;<br>
+      • Transtorno do Espectro Autista (TEA);<br>
+      • Esclerose Lateral Amiotrófica (ELA);<br>
+      • Atrofia Muscular Espinha (AME);<br>
+      • Esclerose Múltipla;<br>
+      • Distrofias Musculares;<br>
+      • Demais síndromes;<br>
+      • E outras condições semelhantes.<br>
+      <img src="<%= image_url('crianca.png') %>" style="width: 600px; height: 350px; position: relative; left: 400px; top: 30px;" alt="deficiente">
+    </div>
+  </div>
+<% end %>
+
+<% if @user.nenhuma == true && @user.idadee < 60 %>
   <div class="container-maior container-sm">
     <div class="margem">
       <div class="row">
@@ -272,7 +309,7 @@
         <img src="<%= image_url('coronaa.png') %>" class="risco" alt="grupo de risco">
       </div>
     </div>
-  
+
     <div class="row">
       <div class="col-sm card">
         <p class="subtitulo-cinza-negrito">• Higienização frequente das mãos com água e sabonete (durante 30s) ou álcool gel a 70%;</p>
@@ -307,27 +344,9 @@
     </div>
   </div>
   </div>
-
-    <div class="container-azul" style="height: 660px;">
-      <div class="row subtitulo-azul padding">
-        <p class="titulo-h2" style="font-size: 30px; margin-bottom: 0;">É importante ressaltar que a criança com deficiência faz parte do grupo de risco, incluindo:</p><br>
-        • Paralisia Cerebral;<br>
-        • Microcefalia;<br>
-        • Síndrome de Down;<br>
-        • Transtorno do Espectro Autista (TEA);<br>
-        • Esclerose Lateral Amiotrófica (ELA);<br>
-        • Atrofia Muscular Espinha (AME);<br>
-        • Esclerose Múltipla;<br>
-        • Distrofias Musculares;<br>
-        • Demais síndromes;<br>
-        • E outras condições semelhantes.<br>
-        <img src="<%= image_url('crianca.png') %>" style="width: 600px; height: 350px; position: relative; left: 400px; top: 30px;" alt="deficiente">
-      </div>
-    </div>
-
+<% end %>
 
 <!-- ------------------  todos -->
-
 
 <div class="container-quarentena">
   <div class="row padding">
@@ -399,8 +418,8 @@
     </div>
     </div>
   </div>
-  
 
+<% if @user.possui_crianca == true%>
 <div class="section-head text-center wide-lg padding" style="position: relative; left: 350px; height: 950px;">
   <h5 class="subtitle" style="font-family: Raleway, sans-serif; font-size: 16px; line-height: 30px;">Como você possui criança na sua residência, separamos algumas leituras nesse período :)</h5>
   <h2 class="title" style="font-weight: 700; font-family: Oswald, sans-serif; line-height: 1.3; margin-bottom: 0.5rem; color: #50658e; font-size: 2.25rem;">Cartilhas e Contos</h2>
@@ -422,7 +441,7 @@
           </table>
     </p>
 </div>
-
+<% end %>
 
   <div class="container-quiz">
     <div class="row padding">
@@ -447,7 +466,7 @@
       <div class="col-sm-6">
         <img src="<%= image_url('fake-news.png') %>" class="imagem-fake" alt="quiz fake news"><br><br>
         <p class="subtitulo-preto" style="text-align: center;">Será que você sabe diferenciar uma notícia verdadeira<br> de uma fake news? Confira no nosso Quiz!</p>
-        <button type="button" class="botao-finalizar botao-jogar">JOGAR AGORA</button>
+        <button class="botao-finalizar botao-jogar"><a href="/games/new" target="_blank">JOGAR AGORA</a></button>
       </div>
     </div>
   </div>
@@ -474,12 +493,76 @@
     </div>
   </div>
 
-  <!-- ----------- quarentena ------------- -->
-
 <!-- -----------------------------  -->
 </section>
+</body>
 
 <style>
+@media (min-width: 420px) {
+.container {
+  max-width: 414px; } }
+@media (min-width: 576px) {
+.container {
+  max-width: 540px; } }
+@media (min-width: 768px) {
+.container {
+  max-width: 720px; } }
+@media (min-width: 992px) {
+.container {
+  max-width: 960px; } }
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1140px; } }
+
+  .container-azul {
+      background-color: #96b2e7;
+      height: 600px;
+      border-radius: 0 0 50px 50px;
+    }
+
+    .container-azul-imagem {
+      background-image: url(/assets/fundo-escuro-pequeno.jpeg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 600px;
+    }
+    .container-quiz {
+      background-image: url(/assets/quiz.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 900px;
+    }
+
+    .container-vermelho {
+      background-image: url(/assets/red.png);
+      background-repeat: no-repeat;
+      background-size: cover;
+      height: 600px;
+      border-radius: 0 0 50px 50px;
+    }
+
+    .container-corona {
+      height: 800px;
+    }
+    .container-quarentena {
+      height: 1900px;
+    }
+
+
+    .container-menor {
+      height: 300px;
+      background-image: url(/assets/azul.jpeg);
+      background-repeat: no-repeat;
+      background-size: cover;
+      border-radius: 0 0 50px 50px;
+      height: 400px;
+    }
+
+    .container-maior {
+      height: 1300px;
+    }
+
+
   .hipertensao {
     right: 0;
     left: 90px;
@@ -558,32 +641,6 @@
       top: 100px;
       width: 600px;
     }
-    .container-azul {
-      background-color: #96b2e7;
-      height: 600px;
-      border-radius: 0 0 50px 50px;
-    }
-
-    .container-azul-imagem {
-      background-image: url(/assets/fundo-escuro-pequeno.jpeg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 600px;
-    }
-    .container-quiz {
-      background-image: url(/assets/quiz.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 900px;
-    }
-
-    .container-vermelho {
-      background-image: url(/assets/red.png);
-      background-repeat: no-repeat;
-      background-size: cover;
-      height: 600px;
-      border-radius: 0 0 50px 50px;
-    }
 
     .margem {
       margin: 60px 40px 0 40px;
@@ -591,12 +648,6 @@
     .risco {
       height: 400px;
       margin-bottom: 80px;
-    }
-    .container-corona {
-      height: 800px;
-    }
-    .container-quarentena {
-      height: 1900px;
     }
 
     .padding {
@@ -632,19 +683,6 @@
         border-radius: 30px;
         position: relative;
       }
-
-      .container-menor {
-      height: 300px;
-      background-image: url(/assets/azul.jpeg);
-      background-repeat: no-repeat;
-      background-size: cover;
-      border-radius: 0 0 50px 50px;
-      height: 400px;
-    }
-
-    .container-maior {
-      height: 1300px;
-    }
 
     .subtitulo {
         font-family: 'Raleway', sans-serif;
@@ -735,5 +773,4 @@
 
 
 </style>
-</body>
 
