--- a/app/assets/stylesheets/cadastro.scss
+++ b/app/assets/stylesheets/cadastro.scss
@@ -28,7 +28,7 @@
   }
 
   .fundo-externo {
-    background-image: url(/assets/fundo-escuro-pequeno.jpeg);
+    background-image: url(/assets/fundo-escuro-pequeno.jpg);
     background-attachment: fixed;
     background-position: center top;
     background-repeat: no-repeat;
