--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -251,7 +251,7 @@
       </div>
       <div class="col-sm card">
         <p class="subtitulo-cinza-negrito">• Seguir a “etiqueta respiratória” quando possível:</p>
-        <img src="<%= image_url('etiqueta1.jpeg') %>" style="width: 360px; height: 230px; position: relative; left: 30px; top: 20px" alt="dar as mãos">
+        <img src="<%= image_url('etiqueta1.jpg') %>" style="width: 360px; height: 230px; position: relative; left: 30px; top: 20px" alt="dar as mãos">
       </div>
 
       <div class="col-sm card">
@@ -318,7 +318,7 @@
       </div>
       <div class="col-sm card">
         <p class="subtitulo-cinza-negrito">• Seguir a “etiqueta respiratória” quando possível:</p>
-        <img src="<%= image_url('etiqueta1.jpeg') %>" style="width: 360px; height: 230px; position: relative; left: 30px; top: 20px" alt="dar as mãos">
+        <img src="<%= image_url('etiqueta1.jpg') %>" style="width: 360px; height: 230px; position: relative; left: 30px; top: 20px" alt="dar as mãos">
       </div>
 
       <div class="col-sm card">
@@ -521,7 +521,7 @@
       }
   
       .container-azul-imagem {
-        background-image: url(/assets/fundo-escuro-pequeno.jpeg);
+        background-image: url(/assets/fundo-escuro-pequeno.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         height: 600px;
@@ -551,7 +551,7 @@
   
       .container-menor {
         height: 300px;
-        background-image: url(/assets/azul.jpeg);
+        background-image: url(/assets/azul.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: 0 0 50px 50px;
