--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -551,7 +551,7 @@
   
       .container-menor {
         height: 300px;
-        background-image: url(/assets/azul.jpg);
+        background-image: url(<%= asset_path("azul.jpg")%>);
         background-repeat: no-repeat;
         background-size: cover;
         border-radius: 0 0 50px 50px;
