--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -521,20 +521,20 @@
       }
   
       .container-azul-imagem {
-        background-image: url(/assets/fundo-escuro-pequeno.jpeg);
+        background-image: url(<%= asset_path("fundo-escuro-pequeno.jpeg")%>);
         background-repeat: no-repeat;
         background-size: cover;
         height: 600px;
       }
       .container-quiz {
-        background-image: url(/assets/quiz.png);
+        background-image: url(<%= asset_path("quiz.png")%>);
         background-repeat: no-repeat;
         background-size: cover;
         height: 900px;
       }
   
       .container-vermelho {
-        background-image: url(/assets/red.png);
+        background-image: url(<%= asset_path("red.png")%>);
         background-repeat: no-repeat;
         background-size: cover;
         height: 600px;
