--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -521,7 +521,7 @@
       }
   
       .container-azul-imagem {
-        background-image: url(<%= asset_path("fundo-escuro-pequeno.jpeg")%>);
+        background-image: url(<%= asset_path("fundo-escuro-pequeno.jpg")%>);
         background-repeat: no-repeat;
         background-size: cover;
         height: 600px;
