--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -474,7 +474,7 @@
 
   .fundo-externo {
     
-    background-image: url(<%= asset_path("fundo-escuro-pequeno.jpeg")%>);
+    background-image: url(<%= asset_path("fundo-escuro-pequeno.jpg")%>);
     background-attachment: fixed;
     background-position: center top;
     background-repeat: no-repeat;
