--- a/app/views/informations/show.html.erb
+++ b/app/views/informations/show.html.erb
@@ -533,6 +533,34 @@
         height: 900px;
       }
   
+      .botao-finalizar {
+        background-color: #ff8d02;
+        background-image: url(<%= asset_path("icone.png")%>);
+        background-position: right;
+        background-repeat: no-repeat;
+        border-radius: 20px;
+        width: 160px;
+        height: 40px;
+        font-size: 18px;
+        font-family: 'Oswald-Bold', sans-serif;
+        color: #191970;
+        outline: 0;
+      }
+      .botao-cancelar {
+        background-color: #ff8d02;
+        background-image: url(<%= asset_path("icone.png")%>);
+        background-position: right;
+        background-repeat: no-repeat;
+        border-radius: 20px;
+        width: 200px;
+        height: 40px;
+        font-size: 18px;
+        font-family: 'Oswald-Bold', sans-serif;
+        color: #191970;
+        outline: 0;
+
+      }
+
       .container-vermelho {
         background-image: url(<%= asset_path("red.png")%>);
         background-repeat: no-repeat;
